tests/core/data/csl/TypeLoaderTests/SyntaxError/struct5.csl
struct struct5
{
	battribute redonly string name;
};
